tests/error/struct_errors/invalid_generic.err
Error: Expected a type parameter (at $FILE:10:23)
   | 
 8 | 
 9 | @guppy.struct
10 | class MyStruct(Generic[X]):
   |                        ^ Expected a type parameter

Guppy compilation failed due to 1 previous error
